Reservations  - database changes:    - deleted the old database model      - course reservations replaced by "reservation" attribute    - created a new database model that better follows the latest design     - a reservation is set to an instructional offering with optional (many-to-many) configurations and classes  - user interface changes     - the old (and mostly disabled) user interface replaced by a new (GWT-based) one     - a new Reservations page created, and there is a Reservations table under the Instructional Offering Details page  - solver changes     - reservations are now being loaded into the student sectioning solver  - constraint solver updated with the latest version (1.2.31)    - added course reservations    - added ability to enroll students with individual reservation over the class / course / section limit    - fixed NullPointerException when last-like student course requests are involved (after a recent change (reservations), first last-like adept got ignored)